@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-27T01:47:08Z",
-  "count_outdated" : 1899,
-  "uniques_outdated" : 1138,
-  "count" : 1911,
-  "uniques" : 1150,
+  "timestamp" : "2025-07-28T01:45:33Z",
+  "count_outdated" : 1900,
+  "uniques_outdated" : 1139,
+  "count" : 1912,
+  "uniques" : 1151,
   "clones" : [
-    {
-      "timestamp": "2025-07-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-07-15T00:00:00Z",
       "count": 1,
@@ -106,6 +97,15 @@
     },
     {
       "timestamp": "2025-07-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-27T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
